# system-controller

./: .gitignore  README.md  TECHNICAL_SPEC.md  pyproject.toml  services.yaml  spec.md
src/system_controller/: __main__.py  app.py  cli.py  config.py  inventory.py  models.py  services.py  ssh.py
src/system_controller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/system_controller/screens/: confirm.py  detail.py  main.py
